# hs-gl-test

./: fshader.fragmentshader  gltest.cabal  vshader.vertexshader
src/: Main.hs
