name:                 gltest
version:              0.1.0.0
build-type:           Simple
cabal-version:        >=1.10

executable gltest
  main-is:              Main.hs
  build-depends:
    base >=4.7 && <4.8
    , gl
    , sdl2
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded
